@@ -4,6 +4,7 @@
 	fixed prototype bug in neko when "Main" class is defined
 	fixed flash9 xml iterator methods
 	bugfix in flash9 ByteArray serialization
+	fixed genAS3 conflicting classes and interfaces
 
 2007-05-18: 1.13
 	fixed bug with local variable masking package in catch type
